# market

./: .gitignore  README.md  next.config.ts  package.json  requirements.txt  tickers.json
app/backend/: CMakeLists.txt  app.py  main.cpp
app/components/: bidask.tsx  chart.tsx  companydetails.tsx  dashboard.tsx  placeorder.tsx  portfoliochart.tsx  portfoliodiversity.tsx  portfoliometrics.tsx  positionstab.tsx
backend/: CMakeLists.txt  app.py  main.cpp  requirements.txt  start_all.sh  test.ipynb
backend/api/: urls.py  views.py
backend/backend/: settings.py  urls.py
backend/bridge/: bridge.js  package-lock.json  package.json
backend/common/: env-config.hpp  lf-queue.hpp  protocol.h
backend/gateway/: gateway.hpp  main.cpp
backend/matching/: matching-engine.hpp  order-book.hpp
backend/participants/: bot.hpp  directional-bot.hpp  main.cpp  market-maker.hpp  participant.hpp
backend/publisher/: market-data-publisher.hpp
data/: stocks.csv
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/valid-ticker/: route.ts
frontend/app/components/: bidask.tsx  chart.tsx  companydetails.tsx  dashboard.tsx  placeorder.tsx  portfoliochart.tsx  portfoliodiversity.tsx  portfoliometrics.tsx  positionstab.tsx  tradehistory.tsx
frontend/src/: App.css  App.js  bidask.css  candle.css  placeorder.css
frontend/src/pages/: barchart.js  bidask.js  candlestick.js  chart.js  charter.js  companies.js  dashboard.js  info.js  market.js  placeorder.js
scripts/: getdata.ipynb
tests/: CMakeLists.txt  main.cpp
tests/common/: test_lf_queue.cpp
tests/gateway/: test_gateway.cpp
tests/matching/: test_matching_engine.cpp  test_order_book.cpp
